[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prep-pal-api"
version = "1.0.0"
description = "Simple FastAPI endpoint to process a session configuration"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "PyMuPDF",
    "mammoth",
    "better-profanity",
    "requests",
    "livekit",
    "livekit-api",
    "google-cloud-firestore",
    "google-genai",
    "pydantic",
    "firebase-admin",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]
